@@ -1,3 +1,8 @@
+2004-04-30  Jonathan Larmour  <jifl@eCosCentric.com>
+
+	* src/ecos/timeout.c (callout_reset): Clarify assert message on
+	expiry date from ages ago and also add comment explaining further.
+
 2004-03-30  Horst Kronstorfer  <horst.kronstorfer@frequentis.com>
  
         * src/sys/kern/uipc_mbuf.c
